modified README.md index.html

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
     <img src="./images/logo-white.svg" alt="logo" />
     <div class="flex align-start">
       <ul>
-        <li>Phone: +1-543-123-4567</li>
-        <li>example@fylo.com</li>
+        <li>Phone: +2348078116136</li>
+        <li>saintmichaell42@gmail.com</li>
       </ul>
 
       <ul>
@@ -144,18 +144,23 @@
 
       <ul class="social-media">
         <li>
-          <a class="circle" href="" >
-            <i class="fab fa-facebook-f"></i>
-          </a>
+          <a class="circle" href="https://github.com/Saintt042/" target="_blank">
+            <i class="fab fa-github-square"></i>
+            </a>
         </li>
         <li>
-          <a class="circle" href="" >
+          <a class="circle" href="https://twitter.com/SaintMichaell" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
         </li>
         <li>
-          <a class="circle" href="" >
+          <a class="circle" href="https://www.instagram.com/saintt042/" target="_blank">
             <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a class="circle" href="https://www.linkedin.com/in/alinwachukwu-michael-17a537235" target="_blank">
+            <i class="fab fa-linkedin"></i>
           </a>
         </li>
       </ul>
