modified: style.css index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600;800&family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&family=Red+Hat+Display:ital,wght@0,700;0,800;1,700&display=swap" rel="stylesheet">
   
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
+  <title>Fylo landing page with two column layout</title>
 
   <link rel="stylesheet" 
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
